--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ ADD_LIBRARY(libUnitsync++ STATIC ${usyncheader} ${libUnitsync++Src} ${commonSrc}
 ADD_EXECUTABLE(libSpringLobby_test WIN32 MACOSX_BUNDLE ${basic_testSrc} )
 ADD_EXECUTABLE(swig_test WIN32 MACOSX_BUNDLE ${CMAKE_CURRENT_SOURCE_DIR}/test/swig.cpp )
 
-SET( SL_BOOST_LIBS boost_system boost_filesystem )
+SET( SL_BOOST_LIBS boost_system boost_filesystem boost_thread )
 TARGET_LINK_LIBRARIES(libSpringLobby ${SL_BOOST_LIBS} )
 TARGET_LINK_LIBRARIES(libUnitsync++ dl ${SL_BOOST_LIBS}  )
 #cimage deps
