--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ SET(CMAKE_COLOR_MAKEFILE ON)
 IF(NOT MSVC)
 	IF( NOT MINGW )
 		#wxMSW generates > 9000 warnings with -wextra...
-		ADD_DEFINITIONS( -Wextra )
+# 		ADD_DEFINITIONS( -Wextra )
 	ENDIF( NOT MINGW )
-	ADD_DEFINITIONS( -Wall -Wno-strict-aliasing -pedantic )
+# 	ADD_DEFINITIONS( -Wall -Wno-strict-aliasing -pedantic )
 ELSE(NOT MSVC)
 	ADD_DEFINITIONS(-D_RC_MSVC)
 ENDIF(NOT MSVC)
