--- a/src/lsl/CMakeLists.txt
+++ b/src/lsl/CMakeLists.txt
@@ -14,6 +14,8 @@ SET(libSpringLobbySrc
 	"${CMAKE_CURRENT_SOURCE_DIR}/battle/ibattle.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/battle/battle.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/battle/tdfcontainer.cpp" 
+	"${CMAKE_CURRENT_SOURCE_DIR}/spring/spring.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/spring/springprocess.cpp"
 	)
 	
 FILE( GLOB RECURSE libSpringLobbyHeader "${CMAKE_CURRENT_SOURCE_DIR}/*.h" )
