--- a/src/lsl/CMakeLists.txt
+++ b/src/lsl/CMakeLists.txt
@@ -35,7 +35,7 @@ IF(MINGW)
 ENDIF(MINGW)
 
 IF (WIN32)
-    install(TARGETS libSpringLobby LIBRARY DESTINATION .)
+    install(TARGETS libSpringLobby DESTINATION . )
     install(FILES AUTHORS COPYING NEWS README THANKS  DESTINATION .)
 	install(DIRECTORY ${CMAKE_INSTALL_PREFIX}/locale DESTINATION .)
 ELSE (WIN32)
