--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -102,11 +102,17 @@ from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
 from buildbot.steps.shell import Compile, ShellCommand, WithProperties
 
-class BuildDocs(ShellCommand) :
-	name = "execute doxygen"
-	description = ["generating doxygen documentation"]
-	descriptionDone = ["docs generated"]
-	command = ["/bin/sh","./tools/update-docs.sh"]
+class SyncSubmodules(ShellCommand) :
+        name = "syncsubmodules"
+        description = 'syncing .gitmodules with .git/config'
+        descriptionDone = 'synced submodule paths'
+        command = ['git', 'submodule', 'sync']
+
+class InitSubmodules(ShellCommand) :
+        name = "submodules"
+        description = 'updating submodules'
+        descriptionDone = 'updated submodules'
+        command = ['git', 'submodule', 'update', '--init']
 
 class StripWindowsInstaller(ShellCommand) :
 	name = "stripping installer files"
@@ -131,12 +137,6 @@ class ReleaseTarball(ShellCommand) :
 	description = ["releasing tarball"]
 	descriptionDone = ["tarball release"]
 	command = ["/usr/bin/install", "-t", "/usr/local/www/springlobby.info/tarballs/", WithProperties("build-linux-default/libspringlobby-"+base_rev+"%(buildnumber)s.tar.gz"), WithProperties("build-linux-default/libspringlobby-"+base_rev+"%(buildnumber)s.tar.bz2")]
-
-class RsyncStuff(ShellCommand) :
-	name = "RSYNC stuff"
-	description = ["rsycn tarball and windows zip"]
-	descriptionDone = ["rsync done"]
-	command =["rsync", "-lrvz", "/usr/local/www/springlobby.info/", "kosh@springlobby.info:/usr/local/www/springlobby.info/"]
 
 class GitTag(ShellCommand) :
 	name = "git tag"
@@ -213,6 +213,26 @@ class AnnounceBuild(ShellCommand) :
 		self.command = ["/usr/bin/sl_announce.py", who]
 
 # common build config steps ---------------------------------------------@
+class buildDocs(Compile):
+	name = 'buildDocs'
+	def __init__(self, configname='linux-default',jobs=1,release=False,**kwargs):
+		self.configname = configname
+		self.release = release
+		Compile.__init__(self, **kwargs)
+		self.haltOnFailure = True
+
+		#mandatory for later (automatic) re-creation of step object
+		self.addFactoryArguments(configname = configname)
+		self.addFactoryArguments(jobs = jobs)
+		self.addFactoryArguments(release= release)
+
+		#self.name 			= self.configname + " build"
+		self.description 	= ["building documentation"]
+		self.descriptionDone	= ["built documentation"]
+		if self.release:
+			self.command		= ['make' ,'BUILDBOT_RELEASE=1','-k', '-j%d'%jobs, '-C', 'build-%s'%(self.configname), 'doc']
+		else:
+			self.command		= ['make' ,'-k', '-j%d'%jobs, '-C', 'build-%s'%(self.configname), 'doc']
 class buildConfig(Compile):
 	name = 'buildConfig'
 	def __init__(self, configname='linux-default',jobs=1,release=False,**kwargs):
@@ -321,7 +341,10 @@ c['builders'].append(bt)
 
 f2 = BuildFactory()
 f2.addStep(Git(repourl=(master_repo)))
-f2.addStep(BuildDocs())
+f2.addStep( SyncSubmodules() )
+f2.addStep( InitSubmodules() )
+f2.addStep( CreateBuildDir() )
+f2.addStep( buildDocs() )
 
 b2 = {'name': "docs",
       'slavename': "documentation",
@@ -334,6 +357,8 @@ class FullBuildFactory(BuildFactory):
 	def __init__(self,dude):
 		BuildFactory.__init__(self)
 		self.addStep(Git(repourl=personal_repo%dude))
+		self.addStep( SyncSubmodules() )
+                self.addStep( InitSubmodules() )
 		for name in set(build_configs.keys()) - set(['osx-default']):
 			self.addStep( CreateBuildDir(name) )
 			self.addStep( buildConfig(configname=name,jobs=6) )
@@ -345,6 +370,8 @@ class TestBuildFactory(BuildFactory):
 	def __init__(self,dude):
 		BuildFactory.__init__(self)
 		self.addStep(Git(repourl=personal_repo%dude))
+		self.addStep( SyncSubmodules() )
+                self.addStep( InitSubmodules() )
 		for env in env_builds:
 			self.addStep( CreateEnvBuildDir(env[0],env[1]) )
 			self.addStep( buildEnvConfig(env[0],env[1],jobs=6) )
@@ -353,6 +380,8 @@ class WinTempBuildFactory(BuildFactory):
 	def __init__(self, who):
 		BuildFactory.__init__(self)
 		self.addStep(Git(repourl=personal_repo%who))
+		self.addStep( SyncSubmodules() )
+                self.addStep( InitSubmodules() )
 		self.addStep( CreateBuildDir('msw-default') )
 		self.addStep( buildConfig(configname='msw-default',jobs=6) )
 		self.addStep(UploadTempBuild(configname='msw-default',who=who  ))
@@ -362,6 +391,8 @@ class WinTempDebugBuildFactory(BuildFactory):
 	def __init__(self, who):
 		BuildFactory.__init__(self)
 		self.addStep(Git(repourl=personal_repo%who))
+		self.addStep( SyncSubmodules() )
+                self.addStep( InitSubmodules() )
 		self.addStep( CreateBuildDir('msw-default') )
 		self.addStep( buildConfig(configname='msw-default',jobs=6) )
 		self.addStep(UploadTempBuild(configname='msw-default',who=who  ))
@@ -371,6 +402,8 @@ class OSXBuildFactory(BuildFactory):
 	def __init__(self, who):
 		BuildFactory.__init__(self)
 		self.addStep(Git(repourl=personal_repo%who))
+		self.addStep( SyncSubmodules() )
+                self.addStep( InitSubmodules() )
 		self.addStep( CreateBuildDir('osx-default') )
 		self.addStep( buildConfig(configname='osx-default',jobs=1) )
 		self.addStep(UploadBundle(configname='osx-default',who=who  ))
@@ -427,7 +460,7 @@ c['status'].append(WebStatus(http_port=8012, authz=authz))
 #                             channels=["#springlobby"]))
 
 from buildbot.status import client
-c['status'].append(client.PBListener(9989))
+c['status'].append(client.PBListener(9889))
 
 from buildbot.status.mail import MailNotifier
 #mn = MailNotifier(fromaddr="koshi@springlobby.info",builders=['release'],
