--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ INCLUDE(cmake/sources_list.cmake)
 
 FIND_PACKAGE( PkgConfig )
 
-FIND_PACKAGE(Boost 1.40.0 REQUIRED)
+FIND_PACKAGE(Boost 1.40.0 COMPONENTS system thread filesystem  REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
