--- a/src/lslutils/CMakeLists.txt
+++ b/src/lslutils/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(libSpringLobbyUtilsSrc
 	"${CMAKE_CURRENT_SOURCE_DIR}/misc.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/lslconfig.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/crc.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/thread.cpp" 
 	"${CMAKE_CURRENT_SOURCE_DIR}/net.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/globalsmanager.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/md5.c"
