--- a/src/unitsync++/CMakeLists.txt
+++ b/src/unitsync++/CMakeLists.txt
@@ -21,4 +21,8 @@ TARGET_LINK_LIBRARIES(libUnitsync++ dl boost_filesystem-mt boost_thread-mt )
 #cimage deps
 FIND_PACKAGE( PNG REQUIRED)
 ADD_DEFINITIONS( -Dcimg_use_png )
-TARGET_LINK_LIBRARIES(libUnitsync++ ${PNG_LIBRARY} X11 )
+TARGET_LINK_LIBRARIES(libUnitsync++ ${PNG_LIBRARY} )
+
+if( ${CMAKE_CROSS_COMPILING} )
+	TARGET_LINK_LIBRARIES(libUnitsync++ dl )
+endif()
