--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,8 @@ SET(basic_testSrc
 ADD_EXECUTABLE(libSpringLobby_test WIN32 MACOSX_BUNDLE ${basic_testSrc} )
 ADD_EXECUTABLE(swig_test WIN32 MACOSX_BUNDLE ${CMAKE_CURRENT_SOURCE_DIR}/swig.cpp )
 
-SET( SL_BOOST_LIBS boost_system boost_filesystem boost_thread )
-
 INCLUDE_DIRECTORIES(${libSpringLobby_SOURCE_DIR}/src)
-TARGET_LINK_LIBRARIES(libSpringLobby_test libSpringLobby libUnitsync++ )
+TARGET_LINK_LIBRARIES(libSpringLobby_test dl libSpringLobby libUnitsync++ dl)
+IF( NOT WIN32 )
+	TARGET_LINK_LIBRARIES(libSpringLobby_test X11 )
+ENDIF()
