fix packaging when included in SL

--- a/src/lsl/CMakeLists.txt
+++ b/src/lsl/CMakeLists.txt
@@ -35,12 +35,9 @@ IF(MINGW)
 ENDIF(MINGW)
 
 IF (WIN32)
-    install(TARGETS libSpringLobby DESTINATION . )
-    install(FILES AUTHORS COPYING NEWS README THANKS  DESTINATION .)
-	install(DIRECTORY ${CMAKE_INSTALL_PREFIX}/locale DESTINATION .)
+    install_if_standalone(TARGETS libSpringLobby DESTINATION . )
 ELSE (WIN32)
-    install(TARGETS libSpringLobby 
+    install_if_standalone(TARGETS libSpringLobby 
 		LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib 
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
-    install(FILES AUTHORS COPYING NEWS README THANKS DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/libSpringLobby )
 ENDIF (WIN32)
