--- a/src/lslutils/CMakeLists.txt
+++ b/src/lslutils/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 SET(libSpringLobbyUtilsSrc
 	"${CMAKE_CURRENT_SOURCE_DIR}/misc.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/lslconfig.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/config.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/crc.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/thread.cpp" 
 	"${CMAKE_CURRENT_SOURCE_DIR}/net.cpp"
@@ -19,5 +19,5 @@ LIST( APPEND libSpringLobbyUtilsHeader ${templatesources} )
 set_source_files_properties(  ${libSpringLobbyUtilsHeader} PROPERTIES HEADER_FILE_ONLY 1 )
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-ADD_LIBRARY(libSpringLobbyUtils STATIC ${libSpringLobbyHeader} ${libSpringLobbyUtilsSrc} )
-TARGET_LINK_LIBRARIES(libSpringLobbyUtils boost_thread-mt)
+ADD_LIBRARY(lsl-utils STATIC ${libSpringLobbyHeader} ${libSpringLobbyUtilsSrc} )
+TARGET_LINK_LIBRARIES(lsl-utils boost_thread-mt)
